# state_collapser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EVALUATION.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/images/: replace_color.py
docs/: artifact_contracts.md  package_usage.md  public_api.md
docs/api_notes/: fiber_conditioned_stage.md  frozen_quotient_behavior.md  partition_tower.md  path_fiber.md  tensorization_boundary.md  training_inputs_and_transitions.md
docs/code_review/: 01_001_loghrl_partition_tower_vs_src_review.md  02_001_synthetic_blow_full_repo_review.md
docs/design/: implementation_contracts.md  logHRL.bib  logHRL.tex  logHRL_state_vs_path_address_capacity_note.tex  logHRL_w_comments.tex  module_design_desiderata.md  old_README_blurb.md  package_best_practices_proposal.md  reward_locality_for_quotient_training.md  training_integration_surface_proposal.md
docs/outreach/: state_collapser_outreach_rolodex_brief.md
docs/prime_directive/: common_failure_mode_001.md  common_failure_mode_002_implementation_without_owner_approval.md  common_failure_mode_003_gameplan_rewrite_during_implementation.md  consultant_tricks.md  git_practices.md  prime_directive.md
docs/usage/: 01_001_what_state_collapser_is.md  01_002_tower_runtime_mental_model.md  01_003_training_surface_quickstart.md  01_004_fiber_conditioned_training.md  01_005_using_your_own_training_loop.md  01_006_gymnasium_integration.md  01_007_glossary.md  01_008_common_misunderstandings.md  01_009_downstream_applications.md  01_010_tensorization_boundary.md
src/state_collapser/: __init__.py  _version.py
tests/: test_package.py
tests/adapters/: test_gymnasium_adapter.py  test_state_collapser_gym_wrapper.py
tests/benchmarks/: test_tower_runtime_bench.py
tests/contract/: test_label_policy.py  test_random_policy.py
tests/core/: test_action.py  test_edges.py  test_rewards.py  test_state.py
tests/examples/: schema_assertions.py  test_articulated_loop_env_geometry.py  test_articulated_loop_env_runtime_integration.py  test_articulated_loop_env_tower_training.py  test_articulated_loop_env_transitions.py  test_articulated_loop_env_validity.py  (+38 more)
(+265 files in other folders)
